# PixelProject-v3

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
PixelProject/: imgui.ini  main.cpp
PixelProject/Scripts/: Game.cpp  Game.h
PixelProject/Scripts/Camera/: Camera.cpp  Camera.h  FlyCamera.cpp  FlyCamera.h
PixelProject/Scripts/Config/: ConfigFile.h  GameSettings.h
PixelProject/Scripts/Constants/: DebugConstants.h
PixelProject/Scripts/Core/Events/: Delegate.h
PixelProject/Scripts/Debug/: DebugAssertion.h  FpsTracker.cpp  FpsTracker.h  GLErrorCallback.cpp  GLErrorCallback.h
PixelProject/Scripts/Debug/Memory/: MemoryUsage.cpp  MemoryUsage.h  MemoryUsage_linux.cpp  MemoryUsage_win.cpp
PixelProject/Scripts/GameObject/: GameObject.h  Transform.cpp  Transform.h
PixelProject/Scripts/Global/: Constants.h
PixelProject/Scripts/Input/: InputContainer.cpp  InputContainer.h  InputEventContainer.cpp  InputEventContainer.h  InputKeyCodes.h  InputManager.cpp  InputManager.h
PixelProject/Scripts/Interfaces/: ISerialize.cpp  ISerialize.h
PixelProject/Scripts/Macros/: DefaultMemberFunc.h  InlineReturn.h
PixelProject/Scripts/Math/: Math.h
PixelProject/Scripts/Math/Vec2/: IVec2.cpp  IVec2.h  SVec2.cpp  SVec2.h  Vec2.cpp  Vec2.h
PixelProject/Scripts/Rendering/: Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VertexBufferObject.cpp  VertexBufferObject.h
PixelProject/Scripts/Rendering/Misc/: TextureFormatData.h  TextureUtility.cpp  TextureUtility.h
PixelProject/Scripts/Rendering/Shaders/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
PixelProject/Scripts/UI/: IDrawGUI.cpp  IDrawGUI.h  UIManager.cpp  UIManager.h
PixelProject/Scripts/UI/Debug/: DebugStats.cpp  DebugStats.h
PixelProject/Scripts/UI/Paint/: PaintSelector.cpp  PaintSelector.h
PixelProject/Scripts/Utility/: BitWise.h  Console.cpp  Console.h  FileIO.h  XorShift.h
PixelProject/Scripts/Utility/Time/: TimeTracker.cpp  TimeTracker.h  TimeWatcher.cpp  TimeWatcher.h  Timer.cpp  Timer.h
PixelProject/Scripts/World/: PixelMask.h  WorldConstants.h  WorldSimulator.cpp  WorldSimulator.h
PixelProject/Scripts/World/Chunk/: WorldChunk.cpp  WorldChunk.h
PixelProject/Scripts/World/Pixels/: PixelTypes.h  WorldDataHandler.cpp  WorldDataHandler.h
PixelProject/Scripts/World/Pixels/Base/: BasePixel.cpp  BasePixel.h  PixelUpdateResult.cpp  PixelUpdateResult.h
PixelProject/Scripts/World/Pixels/Types/: AcidPixel.h  DirtPixel.h  FirePixel.h  GoldPixel.h  OilPixel.h  SandPixel.h  SpacePixel.h  SteamPixel.h  WaterPixel.h  WoodPixel.h
PixelProject/Scripts/World/Utility/: WorldGenerator.cpp  WorldGenerator.h
PixelProject/shaders/: orthoWorld.frag
